--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "extinct-event",
+  "name": "yerodincs",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -9,6 +9,8 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.0.9"
+    "@astrojs/tailwind": "^5.1.3",
+    "astro": "^5.0.9",
+    "tailwindcss": "^3.4.17"
   }
 }
